Correção da boda
Foi colocada uma div limite responsável pelo limite da boda.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </head>
 
     <body>
-        
+       <div id="limite"> 
         <!-- Top menu -->
 		<nav class="navbar" role="navigation">
 			<div class="container">
@@ -235,7 +235,7 @@
 	                    <p>
 	                    	Escreva a sua mensagem que responderemos assim que possível!!
 	                    </p>
-	                    <form role="form" action="assets/contact.php" method="post">
+	                    <form  action="assets/sendmail.php" method="post">
 	                    	<div class="form-group">
 	                    		<label for="contact-name">Nome</label>
 	                        	<input type="text" name="name" placeholder="Insira seu nome..." class="contact-name" id="contact-name">
@@ -307,7 +307,7 @@
         <script src="assets/js/jquery.ui.map.min.js"></script>
         <script src="assets/js/scripts.js"></script>
        
-
+	   </div>
     </body>
 
 </html>
